@@ -60,6 +60,12 @@ ICEDTEA_ENV = \
 	"LD_LIBRARY_PATH=" \
 	"FREETYPE2_INC_DIR=$(FREETYPE2_INC_DIR)"
 
+if WITH_CACAO
+ICEDTEA_ENV += \
+	"ALT_HOTSPOT_IMPORT_PATH=$(CACAO)" \
+	"ALT_JDK_IMPORT_PATH=$(CACAO)"
+endif
+
 env:
 	@echo 'unset JAVA_HOME'
 	@echo 'export $(ICEDTEA_ENV)'
